...
                            text = filterEventUiState.errorMessage,
                            color = Color.Red,
                            fontFamily = PoppinsFontFamily,
                            fontSize = 13.sp,
                            modifier = Modifier
                                .fillMaxWidth(0.90f)
                                .testTag("filter_error_message"),
                            textAlign = TextAlign.Center
                        )
                        Spacer(modifier = Modifier.height(6.dp))
                    }
                    Row {
                        Button(
...
                                    viewModel.filterEvents(filter)
                                }
                            },
                            colors = ButtonDefaults.buttonColors(
                                containerColor = ButtonYellow
                            ),
                            modifier = Modifier.testTag("search_button")
                        ) {
                            Text("Search")
                        }

                        Spacer(modifier = Modifier.weight(1f))

...
            modifier = Modifier
                .fillMaxWidth()
                .clip(RoundedCornerShape(50))
                .background(SecondaryGreen)
                .clickable { showDialog = true }
                .padding(horizontal = 16.dp, vertical = 14.dp)
                .testTag("search_bar")
        ) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                Text(
                    text = "Search for an event...",
                    color = TextGreen,
                    modifier = Modifier.weight(1f)
...
            modifier = Modifier
                .padding(
                    top = innerPadding.calculateTopPadding(),
                    bottom = innerPadding.calculateBottomPadding()
                )
                .verticalScroll(rememberScrollState())
                .testTag("home_screen_scaffold")
        ) {
            HeaderSection()
            Column(
                modifier = Modifier.padding(
                    start = 10.dp,
                    end = 10.dp
...
                            .padding(horizontal = 16.dp, vertical = 14.dp)
                            .border(
                                width = 1.dp,
                                color = ButtonCancelRed,
                                shape = RoundedCornerShape(25)
                            )
                            .testTag("no_events_found_message")
                    ) {
                        Row(verticalAlignment = Alignment.CenterVertically) {
                            Text(
                                text = "No events with the desired attributes were found...\n\nPlease try different attributes.",
                                color = ButtonCancelRed,
                                fontFamily = PoppinsFontFamily,
...
