...
) {
    val uiState by viewModel.uiState.collectAsState()

    LazyColumn(
        modifier = Modifier
            .fillMaxSize()
            .testTag("search_form_lazy_column"),
        verticalArrangement = Arrangement.spacedBy(12.dp),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {

        item {
            MakeGenericTextfield(
...
                        focusedBorderColor = PrimaryGreen,
                        unfocusedBorderColor = SecondaryGreen,
                        backgroundColor = SecondaryGreen
                    ),
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("create_eventType_input")
                )

                Spacer(modifier = Modifier.height(4.dp))

                ExposedDropdownMenu(
                    expanded = expanded,
...
